[package]
name = "midilatch"
version = "0.1.0"
authors = ["Nico Westerbeck <Nico.Westerbeck@mailbox.tu-dresden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wmidi = "3.1.0"
lv2 = "0.5.1"